unpackaged/main/default/objects/Survey__c/Survey__c.object-meta.xml
<CustomObject>
    <description>Houses Clicktools and GetFeedback survey responses</description>
    <label>TSSurvey</label>
    <nameField>
        <label>Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>