unpackaged/main/default/objects/Survey__c/fields/Chat_Date_Time_Created__c.field-meta.xml
<CustomField>
    <fullName>Chat_Date_Time_Created__c</fullName>
    <description>Track the date-time when the chat was created and survey sent</description>
    <label>Chat Date/Time Created</label>
    <type>DateTime</type>
</CustomField>