unpackaged/main/default/objects/Survey__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <inlineHelpText>When you have completed the follow-up for the survey response, type your notes/comments here</inlineHelpText>
    <label>Follow-up Complete Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>