unpackaged/main/default/objects/Survey__c/fields/CS_Additional_Feedback__c.field-meta.xml
<CustomField>
    <fullName>CS_Additional_Feedback__c</fullName>
    <inlineHelpText>Do you have any other feedback on how we can make this service better?</inlineHelpText>
    <label>CS Additional Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>