unpackaged/main/default/objects/Survey__c/fields/Date_Mismatch_Chat_Survey__c.field-meta.xml
<CustomField>
    <fullName>Date_Mismatch_Chat_Survey__c</fullName>
    <description>The date of the case does not match dat of the chat survey submission</description>
    <formula>DATEVALUE(Case__r.CreatedDate) &lt;&gt;  DATEVALUE(Chat_Date_Time_Created__c)</formula>
    <inlineHelpText>The date of the case does not match dat of the chat survey submission</inlineHelpText>
    <label>Date Mismatch Chat Survey</label>
    <type>Checkbox</type>
</CustomField>