unpackaged/main/default/objects/Survey__c/fields/Follow_up_complete_date__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_complete_date__c</fullName>
    <description>This is the follow-up complete date</description>
    <inlineHelpText>Date for when the follow-up has been completed</inlineHelpText>
    <label>Follow-up complete date</label>
    <type>Date</type>
</CustomField>