unpackaged/main/default/objects/Survey__c/fields/Follow_up_Owner__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Owner__c</fullName>
    <inlineHelpText>The person taking ownership of completing the follow-up required for this survey response</inlineHelpText>
    <label>Follow-up Owner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abraham M.</fullName>
            </value>
            <value>
                <fullName>Anousak L</fullName>
            </value>
            <value>
                <fullName>Brendan C</fullName>
            </value>
            <value>
                <fullName>Crhistel</fullName>
            </value>
            <value>
                <fullName>David</fullName>
            </value>
            <value>
                <fullName>Eduardo</fullName>
            </value>
            <value>
                <fullName>Hector V</fullName>
            </value>
            <value>
                <fullName>Kelly O</fullName>
            </value>
            <value>
                <fullName>Laura</fullName>
            </value>
            <value>
                <fullName>Nori</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>