unpackaged/main/default/objects/Survey__c/fields/From_Internal__c.field-meta.xml
<CustomField>
    <fullName>From_Internal__c</fullName>
    <formula>IF( CONTAINS(Contact__r.Email ,&quot;@brightcove.com&quot;),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>From Internal</label>
    <type>Checkbox</type>
</CustomField>