unpackaged/main/default/objects/Survey__c/fields/How_useful_was_this_topic__c.field-meta.xml
<CustomField>
    <fullName>How_useful_was_this_topic__c</fullName>
    <label>How useful was this topic</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>