unpackaged/main/default/objects/Survey__c/fields/Issue_resolved_through_chat__c.field-meta.xml
<CustomField>
    <fullName>Issue_resolved_through_chat__c</fullName>
    <description>For chat surveys</description>
    <label>Issue resolved through chat</label>
    <type>TextArea</type>
</CustomField>