unpackaged/main/default/objects/Survey__c/fields/Notes_for_Follow_up__c.field-meta.xml
<CustomField>
    <fullName>Notes_for_Follow_up__c</fullName>
    <inlineHelpText>When assigning owners to survey follow-ups, type notes regarding the case here</inlineHelpText>
    <label>Notes for Follow-up</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>