unpackaged/main/default/objects/Survey__c/fields/POP_Additional_training__c.field-meta.xml
<CustomField>
    <fullName>POP_Additional_training__c</fullName>
    <description>KM:  Questions for the POP 2018 Survey, What additional Brightcove training sessions would you like in the future?</description>
    <inlineHelpText>What additional Brightcove training sessions would you like in the future?</inlineHelpText>
    <label>POP Additional Training</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>