unpackaged/main/default/objects/Survey__c/fields/PP_Willing_to_join_Support_Ref_Pgrm__c.field-meta.xml
<CustomField>
    <fullName>PP_Willing_to_join_Support_Ref_Pgrm__c</fullName>
    <label>PP Willing to join Support Ref Pgrm</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>I am willing to join Brightcove&#39;s Support Reference Program</fullName>
            </value>
            <value>
                <fullName>I do not wish to join Brightcove&#39;s Support Reference Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>