unpackaged/main/default/objects/Survey__c/fields/Sales_Related__c.field-meta.xml
<CustomField>
    <fullName>Sales_Related__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Related?</label>
    <type>Checkbox</type>
</CustomField>