unpackaged/main/default/objects/Survey__c/fields/Support_Docs_Comments_and_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Support_Docs_Comments_and_Feedback__c</fullName>
    <label>Support Docs - Comments and Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>