unpackaged/main/default/objects/Survey__c/fields/Survey_Average__c.field-meta.xml
<CustomField>
    <fullName>Survey_Average__c</fullName>
    <formula>IF(RecordType.Id == &quot;0128F000000l7o1&quot;,
       IF(    (Overall_Satisfaction_with_support__c + 
                Satisfaction_on_time_to_resolve_case__c + 
                Satisfaction_on_time_to_respond_to_case__c + 
                Satisfaction_with_professionalism__c + 
                Satisfaction_with_specialist_knowledge__c + 
                Effectiveness_of_resolution_of_case__c) &lt;= 0, 0,
(Overall_Satisfaction_with_support__c + 
Satisfaction_on_time_to_resolve_case__c + 
Satisfaction_on_time_to_respond_to_case__c + 
Satisfaction_with_professionalism__c + 
Satisfaction_with_specialist_knowledge__c + 
Effectiveness_of_resolution_of_case__c)
/ 
(IF(Overall_Satisfaction_with_support__c &gt; 0, 1, 0) + 
IF(Satisfaction_on_time_to_resolve_case__c &gt; 0, 1, 0) + 
IF(Satisfaction_on_time_to_respond_to_case__c &gt; 0, 1, 0) +
IF(Satisfaction_with_professionalism__c &gt; 0, 1, 0) + 
IF(Satisfaction_with_specialist_knowledge__c &gt; 0, 1, 0) +
IF(Effectiveness_of_resolution_of_case__c &gt; 0, 1, 0))), 

IF((Satisfaction_w_NOC_team_member__c + 
Satisafaction_w_live_monitoring_overal__c + 
Would_you_recommend_NOC__c + 
Did_we_make_it_easy__c + 
Satisfaction_with_professionalism__c +
Satisfaction_with_specialist_knowledge__c) &lt;= 0, 0,
(Satisfaction_w_NOC_team_member__c + 
Satisafaction_w_live_monitoring_overal__c + 
Would_you_recommend_NOC__c + 
Did_we_make_it_easy__c + 
Satisfaction_with_professionalism__c +
Satisfaction_with_specialist_knowledge__c)
/ 
(IF(Satisfaction_w_NOC_team_member__c&gt; 0, 1, 0) + 
IF(Satisafaction_w_live_monitoring_overal__c &gt; 0, 1, 0) + 
IF(Would_you_recommend_NOC__c &gt; 0, 1, 0) +
IF(Did_we_make_it_easy__c &gt; 0, 1, 0) +
IF(Satisfaction_with_professionalism__c &gt; 0, 1, 0) +
IF(Satisfaction_with_specialist_knowledge__c &gt; 0, 1, 0)
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey Average</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>