unpackaged/main/default/objects/Survey__c/fields/Visited_support_forum_before_raise_case__c.field-meta.xml
<CustomField>
    <fullName>Visited_support_forum_before_raise_case__c</fullName>
    <inlineHelpText>Before you contacted Support, did you first visit the Brightcove Support Center for documentation or Forums for assistance?</inlineHelpText>
    <label>Visited support forum before raise case</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>