unpackaged/main/default/objects/Survey__c/fields/Void_Reason__c.field-meta.xml
<CustomField>
    <fullName>Void_Reason__c</fullName>
    <label>Void Reason</label>
    <type>TextArea</type>
</CustomField>