unpackaged/main/default/objects/Survey__c/fields/Void_Survey__c.field-meta.xml
<CustomField>
    <fullName>Void_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Void Survey</label>
    <type>Checkbox</type>
</CustomField>