unpackaged/main/default/objects/Survey__c/fields/Was_it_easy_to_find__c.field-meta.xml
<CustomField>
    <fullName>Was_it_easy_to_find__c</fullName>
    <label>Was it easy to find?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>