unpackaged/main/default/objects/Survey__c/fields/What_content_would_you_lIke_to_see__c.field-meta.xml
<CustomField>
    <fullName>What_content_would_you_lIke_to_see__c</fullName>
    <description>Used by Marketing for blog post ideas</description>
    <label>What content would you lIke to see?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>