unpackaged/main/default/objects/Survey__c/fields/X2Q_Survey__c.field-meta.xml
<CustomField>
    <fullName>X2Q_Survey__c</fullName>
    <formula>IF (NOT(AND(ISBLANK(Satisfaction_with_professionalism__c), ISBLANK(Satisfaction_with_specialist_knowledge__c))),TRUE,null)</formula>
    <label>2Q Survey</label>
    <type>Checkbox</type>
</CustomField>