unpackaged/main/default/objects/Survey__c/fields/XXSupport_Docs_How_Useful_Was_This_Topic__c.field-meta.xml
<CustomField>
    <fullName>XXSupport_Docs_How_Useful_Was_This_Topic__c</fullName>
    <description>Support Docs Site Survey</description>
    <label>XX - Support Docs - How Useful Was This</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>