unpackaged/main/default/objects/Survey__c/recordTypes/Brightcove_University_Survey.recordType-meta.xml
<RecordType>
    <fullName>Brightcove_University_Survey</fullName>
    <active>true</active>
    <description>Brightcove University Surveys (Si L)</description>
    <label>Brightcove University Survey</label>
</RecordType>