unpackaged/main/default/objects/Survey__c/recordTypes/Health_Check.recordType-meta.xml
<RecordType>
    <fullName>Health_Check</fullName>
    <active>true</active>
    <description>Health Check Surveys</description>
    <label>Health Check</label>
</RecordType>