unpackaged/main/default/objects/Survey__c/recordTypes/NOC_Surveys.recordType-meta.xml
<RecordType>
    <fullName>NOC_Surveys</fullName>
    <active>true</active>
    <description>Survey for Live Event Coverage and Channel Monitoring</description>
    <label>NOC Surveys</label>
</RecordType>