unpackaged/main/default/objects/Survey__c/recordTypes/POP_Survey.recordType-meta.xml
<RecordType>
    <fullName>POP_Survey</fullName>
    <active>true</active>
    <description>KM:  To capture Post POP survey questions from ClickTools</description>
    <label>POP Survey</label>
</RecordType>