unpackaged/main/default/objects/Survey__c/recordTypes/Surveys_All.recordType-meta.xml
<RecordType>
    <fullName>Surveys_All</fullName>
    <active>true</active>
    <description>All Technical Support Surveys</description>
    <label>Surveys - All</label>
</RecordType>